--- a/aula05/estados.html
+++ b/aula05/estados.html
@@ -20,5 +20,21 @@
         <li><a href="minasgerais.html">minas gerais</a></li>
         <li><a href="espiritosanto.html">espirito santo</a></li>
     </ul>
+
+    <h3>estados região norte</h3>
+
+    <p>
+        A Região Norte do Brasil é a maior em extensão territorial, ocupando cerca de 45% do território nacional. É composta por 7 estados: Acre, Amapá, Amazonas, Pará, Rondônia, Roraima e Tocantins. A região é marcada pela imensa biodiversidade e pelas florestas tropicais, com destaque para a Amazônia, que cobre grande parte da área e representa a maior floresta tropical do mundo.
+    </p>
+    <ul>
+        <li><a href="acre.html">acre</a></li>
+        <li><a href="amapá.html">acre</a></li>
+        <li><a href="amazonia.html">acre</a></li>
+        <li><a href="pará.html">acre</a></li> 
+        <li><a href="rondonia.html">acre</a></li>
+        <li><a href="roraima.html">acre</a></li>
+        <li><a href="tocantins.html">acre</a></li>
+    </ul>
+
 </body>
 </html>
