--- a/aula05/amazonia.html
+++ b/aula05/amazonia.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>seja bem vindo a amazonia</h1>
+
+    <p>
+        A Amazônia é a maior floresta tropical do mundo, ocupando cerca de 7 milhões de km² e abrangendo nove países da América do Sul, sendo a maior parte no Brasil. É um dos ecossistemas mais ricos em biodiversidade do planeta, abrigando milhões de espécies de plantas, animais e microrganismos, muitas ainda não catalogadas. 
+    </p>
+
+    <p>
+        <img src="amazonia.png" alt="500px">
+    </p>
+    <p>
+        <a href="estados.html">voltar</a>
+        </p>
 </body>
 </html>
