--- a/aula05/estados.html
+++ b/aula05/estados.html
@@ -28,13 +28,33 @@
     </p>
     <ul>
         <li><a href="acre.html">acre</a></li>
-        <li><a href="amapá.html">acre</a></li>
-        <li><a href="amazonia.html">acre</a></li>
-        <li><a href="pará.html">acre</a></li> 
-        <li><a href="rondonia.html">acre</a></li>
-        <li><a href="roraima.html">acre</a></li>
-        <li><a href="tocantins.html">acre</a></li>
+        <li><a href="amapá.html">amapá</a></li>
+        <li><a href="amazonia.html">amazonia</a></li>
+        <li><a href="pará.html">pará</a></li> 
+        <li><a href="rondonia.html">rondonia</a></li>
+        <li><a href="roraima.html">roraima</a></li>
+        <li><a href="tocantins.html">tocantins</a></li>
     </ul>
+
+    <h3>estados da região nordeste</h3>
+
+    <p>
+        Economicamente, o Nordeste já foi a principal produtora de açúcar no Brasil, mas ao longo dos séculos, sua economia se diversificou. Hoje, além da agricultura (com destaque para a produção de frutas, como a manga e o caju), a indústria, o turismo e a energia renovável têm ganhado espaço.
+
+        Apesar de sua enorme riqueza cultural e recursos naturais, o Nordeste enfrenta desafios econômicos e sociais, com altos índices de pobreza e desigualdade. No entanto, é também uma região de grande resistência e inovação, com um povo conhecido por sua hospitalidade, alegria e luta por melhores condições de vida.
+    </p>
+    <ul>
+        <li><a href="maranhão.html">maranhão</a></li>
+        <li><a href="piauí.html">piauí</a></li>
+        <li><a href="ceará.html">ceará</a></li>
+        <li><a href="riograndedonorte.html">rio grande do sul</a></li> 
+        <li><a href="paraíba.html">paraíba</a></li>
+        <li><a href="pernanbuco.html">pernabuco</a></li>
+        <li><a href="alagoas.html">alagoas</a></li>
+        <li><a href="sergipe.html">sergipe</a></li>
+        <li><a href="bahia.html">bahia</a></li>
+    </ul>
+
 
 </body>
 </html>
