--- a/aula05/pará.html
+++ b/aula05/pará.html
@@ -6,6 +6,20 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>sejaa bem vindo ao pará</h1>
+
+    <p>
+        Pará é um dos 26 estados do Brasil, localizado na região Norte do país. É o segundo maior estado brasileiro em extensão territorial, atrás apenas do Amazonas. Sua capital é Belém, uma das cidades mais antigas da região amazônica.
+    </p>
+
+    <p>
+        <img src="pará.jpg" alt="500px">
+    </p>
+    <p>
+        <a href="estados.html">voltar</a>
+        </p>
+
+
     
 </body>
 </html>
