--- a/aula05/parana.html
+++ b/aula05/parana.html
@@ -12,10 +12,10 @@
 
     </p>
     <p>
-        <img src="PR.png" width="500px">
+        <img src="parana.jpg" alt="500px">
     </p>
     <p>
         <a href="estados.html">voltar</a>
-    </p>
+        </p>
 </body>
 </html>
