--- a/exercicio2.html
+++ b/exercicio2.html
@@ -58,8 +58,74 @@
         <tr>
             <td>quarta</td>
             <td>A/B</td>
-            <td colspan>português</td>
+            <td colspan="2">português</td>
+            <td colspan="2">FI/PA</td>
+            <td colspan="2">PA/FI</td>
         </tr>
-    </table>
+        </table>
+
+        <p>Exercicio de rowspan e colspan</p>
+        <table>
+            <tr>
+                <td>dias da semana</td>
+                <td>turma</td>
+                <td>aula 1</td>
+                <td>aula 2</td>
+                <td>aula 3</td>
+                <td>aula 4</td>
+                <td>aula 5</td>
+                <td>aula 6</td>
+            </tr>
+            <tr>
+                <td rowspan="2">domingo</td>
+                <td>A</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td>B</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+            <td rowspan="2">segunda</td>
+            <td>A</td>
+            <td colspan="2">guilherme</td>
+            <td>vagner</td>
+            <td>rafael</td>
+            <td rowspan="2">vagner</td>
+            <td>rafael</td>
+                
+            </tr>
+            <tr>
+                <td>B</td>
+                <td colspan="2">andricson</td>
+                <td>janete</td>
+                <td>ronaldo</td>
+                <td>andricson</td>
+            </tr>
+            <tr>
+                <td rowspan="2"></td>
+                <td>A</td>
+                <td rowspan="2">isabela</td>
+                <td rowspan="2" colspan="2">jaqueline</td>
+                <td rowspan="2">vagner</td>
+                <td rowspan="2" colspan="2">celene</td>
+            </tr>
+            <tr>
+                <td>B</td>
+                
+            </tr>
+        </table>
 </body>
 </html>
